tests/paczka1/fuzzy1/34024301.err
Error in line 9: dVWH5GDWwYF S91 84,1
Error in line 30: uSLLWJdDdze S395 11,F
Error in line 32: A42 S233 75,74
Error in line 26: g7PVSJEll4B S233 360,8
Error in line 38: g7PVSJEll4B S395 64,7
